--- a/contact/contact.html
+++ b/contact/contact.html
@@ -62,11 +62,10 @@
 	<div class="container mt-5">
         <h1>Contact Me!</h1>
         <form class="row g-3" action="https://formsubmit.co/9198eb665317102f16b363691c3ae34e" method="POST">
-          <!-- Honeypot 
-          <input type="text" name="_honey" style="display: none;">-->
 
-          <!-- Disable Captcha
-          <input type="hidden" name="_captcha" value="false">-->
+          <input type="text" name="_honey" style="display: none;">
+
+          <input type="hidden" name="_captcha" value="false">
 
 		  <!-- move to sucess page
           <input type="hidden" name="_next" value="enchantedshutterbug.github.io/success.html" > -->
@@ -109,7 +108,6 @@
 				</div>
 			</div>
 		</div>
-		<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>-->
 		<script src="/javascript/jquery-3.5.1.min.js" type="text/javascript"></script>
 		<script src="/javascript/webflow.9b9973220.js" type="text/javascript"></script>	
 	</body>
