--- a/contact/contact.html
+++ b/contact/contact.html
@@ -67,7 +67,7 @@
 
           <input type="hidden" name="_captcha" value="false">
 
-          <input type="hidden" name="_next" value="enchantedshutterbug.github.io/contact/success.html" >
+          <input type="hidden" name="_next" value="https://enchantedshutterbug.github.io/contact/success.html" >
 
           <div class="col-md-6">
             <label for="firstName" class="form-label">First Name</label>
