--- a/contact/contact.html
+++ b/contact/contact.html
@@ -60,7 +60,7 @@
 	</div>
 
 	<div class="container mt-5">
-        <h1>Contact Me!</h1>
+        <h1>Contact Us!</h1>
         <form class="row g-3" action="https://formsubmit.co/9198eb665317102f16b363691c3ae34e" method="POST">
 
           <input type="text" name="_honey" style="display: none;">
