--- a/contact/contact.html
+++ b/contact/contact.html
@@ -42,7 +42,7 @@
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
 					<div class="dropdown-toggle w-dropdown-toggle">
-						<div class="nav-item"><a href="/aboutus">About Us</a></div>
+						<div class="nav-item"><a href="/aboutus/about.html">About Us</a></div>
 					</div>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
