--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,7 +4,7 @@
 		<title>Contact Us</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="/styling/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+		<!--<link href="/styling/bootstrap.min.css" rel="stylesheet" type="text/css"/>-->
 		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
 		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
