--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html data-wf-domain="enchantedshutterbug.github.io">
 	<head>
 		<title>Fantasy Focus Photography</title>
+		<link href="/styling/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
 		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
