--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html data-wf-domain="enchantedshutterbug.github.io">
 	<head>
 		<title>Fantasy Focus Photography</title>
+		<link href="/styling/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
 		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -56,10 +57,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="section wf-section">
+	<!--<div class="section wf-section">-->
+	<div class="container mt-5">
 		<h2>Freelance Photography for Freelance Cosplayers</h2>
 	</div>
-	<div class="section wf-section">
+	<!--<div class="section wf-section">-->
+	<div class="container mt-5">
 		<h3>This Months Highlights</h3>
 		<div class="container-grid-menu">
 			<a href="" class="grid-menu-item w-inline-block">
