--- a/Japan/VendingMachines/VendingMachines.html
+++ b/Japan/VendingMachines/VendingMachines.html
@@ -113,10 +113,12 @@
 		  <!-- Image text -->
 		  <div class="caption-container">
 			<p id="caption"></p>
-		  </div>
-
-		  <!-- Thumbnail images -->
-		  <div class="row">
+		  </div>		  
+		</div>
+		
+		<!-- Thumbnail images -->
+		<div class="container">
+		<div class="row">
 			<div class="column">
 			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
