--- a/Japan/Cosplay/Cosplay.html
+++ b/Japan/Cosplay/Cosplay.html
@@ -113,9 +113,11 @@
 		  <!-- Image text -->
 		  <div class="caption-container">
 			<p id="caption"></p>
-		  </div>
-
+		  </div>		  
+		</div>
+		
 		  <!-- Thumbnail images -->
+		<div class="container">
 		  <div class="row">
 			<div class="column">
 			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
