--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="nav--container w-container">
 			<div class="brand-container"><!-- logo -->
 				<a href="/index.html" aria-current="page" class="brand w-nav-brand w--current">
-					<img src="/logos/FFP logo 1.png" alt="logo potato" class="navbar-wordmark"/>
+					<img src="/logos/FFLogo 1250x1250.png" alt="logo potato" class="navbar-wordmark"/>
 				</a>
 			</div>
 			<nav role="navigation" class="nav-menu w-nav-menu">
