--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 	<body class="body">
 		<div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease" data-easing2="ease" role="banner" class="nav w-nav">
 		<div class="nav--container w-container">
-			<div class="brand-container"><!-- logo -->
-				<!--<a href="/index.html" aria-current="page" -->
+			<div class="brand-container">
 				<div class="brand w-nav-brand w--current">
 					<a href="/index.html">
-					<img src="/logos/FFLogo 1250x1250.png" alt="logo potato" class="navbar-wordmark"/>
+					<img src="/logos/FFLogo 144x144.png" alt="logo potato" class="navbar-wordmark"/>
 					</a>
 				</div>
-				<!--</a>-->
 			</div>
 			<nav role="navigation" class="nav-menu w-nav-menu">
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
