Update and rename Cosplay.html to FF2023.html

--- a/Japan/Friendship Fest 2023/FF2023.html
+++ b/Japan/Friendship Fest 2023/FF2023.html
@@ -28,7 +28,7 @@
 					<nav class="dropdown-list w-dropdown-list">
 						<a href="/Japan/VendingMachines/VendingMachines.html" class="dropdown-link w-dropdown-link">Vending Machines</a>
 						<a href="/Japan/Nature/Nature.html" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/Japan/Cosplay/Cosplay.html" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
+						<a href="/Japan/Friendship Fest 2023/FF2023.html" class="dropdown-link w-dropdown-link">Friendship Fest</a>
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
@@ -61,50 +61,50 @@
 		</div>
 	</div>
 	<div class="section wf-section">
-		<h2>Cosplay from all over Japan!</h2>
+		<h2>Friendship Fest 2023!</h2>
 	</div>
-			<!-- start of gallery -->
+			<!-- Start of Gallery -->
 		<div class="container">
 
 		  <!-- Full-width images with number text -->
 		  <div class="mySlides">
 			<div class="numbertext">1 / 8</div>
-			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
+			  <img src="/Japan/Friendship Fest 2023/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">2 / 8</div>
-			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
+			  <img src="/Japan/Friendship Fest 2023/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">3 / 8</div>
-			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
+			  <img src="/Japan/Friendship Fest 2023/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">4 / 8</div>
-			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
+			  <img src="/Japan/Friendship Fest 2023/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">5 / 8</div>
-			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
+			  <img src="/Japan/Friendship Fest 2023/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">6 / 8</div>
-			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
+			  <img src="/Japan/Friendship Fest 2023/imgs/" style="width:100%">
 		  </div>
 		  
 		  <div class="mySlides">
 			<div class="numbertext">7 / 8</div>
-			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
+			  <img src="/Japan/Friendship Fest 2023/imgs/" style="width:100%">
 		  </div>
 		  
 		  <div class="mySlides">
 			<div class="numbertext">8 / 8</div>
-			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
+			  <img src="/Japan/Friendship Fest 2023/imgs/" style="width:100%">
 		  </div>
 
 
@@ -122,28 +122,28 @@
 		<div class="container">
 		  <div class="row">
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
+			  <img class="demo cursor" src="/Japan/Friendship Fest 2023/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(2)" alt="Slide 2">
+			  <img class="demo cursor" src="/Japan/Friendship Fest 2023/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(3)" alt="Slide 3">
+			  <img class="demo cursor" src="/Japan/Friendship Fest 2023/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(4)" alt="Slide 4">
+			  <img class="demo cursor" src="/Japan/Friendship Fest 2023/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(5)" alt="Slide 5">
+			  <img class="demo cursor" src="/Japan/Friendship Fest 2023/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(6)" alt="Slide 6">
+			  <img class="demo cursor" src="/Japan/Friendship Fest 2023/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(7)" alt="Slide 7">
+			  <img class="demo cursor" src="/Japan/Friendship Fest 2023/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(8)" alt="Slide 8">
+			  <img class="demo cursor" src="/Japan/Friendship Fest 2023/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 		  </div>
 		</div>
