--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -12,7 +12,7 @@
 		<div class="nav--container w-container">
 			<div class="brand-container"><!-- logo -->
 				<a href="/index.html" aria-current="page" class="brand w-nav-brand w--current">
-					<img src="/logos/FFP logo 1.png" alt="logo potato" class="navbar-wordmark"/>
+					<img src="/logos/FFLogo 144x144.png" alt="logo potato" class="navbar-wordmark"/>
 				</a>
 			</div>
 			<nav role="navigation" class="nav-menu w-nav-menu">
@@ -24,7 +24,7 @@
 					<nav class="dropdown-list w-dropdown-list">
 						<a href="/Japan/VendingMachines/VendingMachines.html" class="dropdown-link w-dropdown-link">Vending Machines</a>
 						<a href="/Japan/Nature/Nature.html" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/Japan/Cosplay/Cosplay.html" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
+						<a href="/Japan/Friendship Fest 2023/FF2023.html" class="dropdown-link w-dropdown-link">Friendship Fest</a>
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
