--- a/contact/success.html
+++ b/contact/success.html
@@ -26,7 +26,7 @@
 					<nav class="dropdown-list w-dropdown-list">
 						<a href="/Japan/VendingMachines/VendingMachines.html" class="dropdown-link w-dropdown-link">Vending Machines</a>
 						<a href="/Japan/Nature/Nature.html" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/Japan/Cosplay/Cosplay.html" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
+						<a href="/Japan/Friendship Fest 2023/FF2023.html" class="dropdown-link w-dropdown-link">Friendship Fest</a>
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
