--- a/index.html
+++ b/index.html
@@ -68,28 +68,28 @@
 		<h3>This Months Highlights</h3>
 		<div class="container-grid-menu">
 			<a href="" class="grid-menu-item w-inline-block">
-				<img src="/testimgs/test 5000x2814.jpg" alt="potato 1" class="grid-menu-item-image"/>
+				<img src="/testimgs/" alt="potato 1" class="grid-menu-item-image"/>
 			</a>
 			<a href="" class="grid-menu-item w-inline-block">
-				<img src="/testimgs/test 5000x2814.jpg" alt="potato 2" class="grid-menu-item-image"/>
+				<img src="/testimgs/" alt="potato 2" class="grid-menu-item-image"/>
 			</a>
 			<a href="" class="grid-menu-item w-inline-block">
-				<img src="/testimgs/test 5000x2814.jpg" alt="potato 3" class="grid-menu-item-image"/>
+				<img src="/testimgs/" alt="potato 3" class="grid-menu-item-image"/>
 			</a>
 			<a href="" class="grid-menu-item w-inline-block">
-				<img src="/testimgs/test 5000x2814.jpg" alt="potato 4" class="grid-menu-item-image"/>
+				<img src="/testimgs/" alt="potato 4" class="grid-menu-item-image"/>
 			</a>
 			<a href="" class="grid-menu-item w-inline-block">
-				<img src="/testimgs/test 5000x2814.jpg" alt="potato 5" class="grid-menu-item-image"/>
+				<img src="/testimgs/" alt="potato 5" class="grid-menu-item-image"/>
 			</a>
 			<a href="" class="grid-menu-item w-inline-block">
-				<img src="/testimgs/test 5000x2814.jpg" alt="potato 6" class="grid-menu-item-image"/>
+				<img src="/testimgs/" alt="potato 6" class="grid-menu-item-image"/>
 			</a>
 			<a href="" class="grid-menu-item w-inline-block">
-				<img src="/testimgs/test 5000x2814.jpg" alt="potato 7" class="grid-menu-item-image"/>
+				<img src="/testimgs/" alt="potato 7" class="grid-menu-item-image"/>
 			</a>
 			<a href="" class="grid-menu-item w-inline-block">
-				<img src="/testimgs/test 5000x2814.jpg" alt="potato 8" class="grid-menu-item-image"/>
+				<img src="/testimgs/" alt="potato 8" class="grid-menu-item-image"/>
 			</a>
 		</div>
 	</div>
